--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 
 
-body {
-    background: url(./../img/title.jpg) no-repeat fixed;
-}
+/* body {
+    background: url(./../img/topImg.png) no-repeat fixed;
+} */
 
 html, body{
     height: 100%;
@@ -21,7 +21,7 @@ nav{
 }
 
 nav #toplogo {
-    width: 200px;
+    width: 100px;
     height: 100px;
     margin: 15px 0 0 10px;
     background-image: url(./../img/icon.png);
@@ -49,6 +49,13 @@ nav #menu .item {
 section {
     width: 50%;
     padding-left: 20%;
+}
+
+section #topImg {
+    width: 800px;
+    height: 500px;
+    background-image: url(./../img/topImg.png);
+    background-repeat: no-repeat;
 }
 
 section h1{
