--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,9 @@ nav #menu{
 }
 
 nav #menu .item {
-    width: 30%;
+    width: 40%;
     display: block;
-    padding-left: 20%;
+    padding-left: 15%;
     padding-top: 35px;
     margin: 0;
     font-size: 30px; 
@@ -62,11 +62,13 @@ section #topImg {
 section h1{
     margin: 20px 5px;
     padding: 10px;
-    background-color: #666;
-    color: #fff;
+    /* background-color: #666; */
+    color: rgb(30, 158, 25);
   -webkit-border-radius: 10px;
      -moz-border-radius: 10px;
           border-radius: 10px;
+    text-align: center;
+    font-size: 50px;
 }
 
 section h2{
