--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ nav {
     margin: 0 0 0 20px;
     font-family: 'Times New Roman', 'Meiryo UI', 'Hiragino Maru Gothic', serif;
     font-size: 16px;
+    color: rgb(63, 180, 92);
 }
 
 nav #menu{
@@ -47,8 +48,21 @@ nav #menu .item {
     font-size: 30px; 
 }
 
+
+.item::after {
+    display: block;
+    font-size: 15px; 
+    padding-top: 10%;
+    padding-left: 15%;
+}
+
+.sub_profile::after { content: "プロフィール"; }
+.sub_info::after { content: "お知らせ"; }
+.sub_work::after { content: "作品集"; }
+.sub_link::after { content: "リンク集"; }
+
 section {
-    width: 50%;
+    width: 30%;
     padding-left: 20%;
 }
 
@@ -60,10 +74,13 @@ section #topImg {
 }
 
 section h1{
-    margin: 20px 5px;
-    padding: 10px;
+    /* text-align: center; */
+    /* margin-left: 50%; */
+    margin: 5px 5px;
+    padding: 5px;
     /* background-color: #666; */
-    color: rgb(30, 158, 25);
+    /* color: rgb(30, 158, 25); */
+    color: #fff;
   -webkit-border-radius: 10px;
      -moz-border-radius: 10px;
           border-radius: 10px;
@@ -72,10 +89,11 @@ section h1{
 }
 
 section h2{
+    font-size: 20px;
+    color: #fff;
     margin: 20px 5px 10px 5px;
     padding: 5px 20px;
-    background-color: #ccc;
-    color: #fff;
+    background-color: rgb(77, 209, 128);
   -webkit-border-radius: 10px;
      -moz-border-radius: 10px;
           border-radius: 10px;
@@ -89,7 +107,9 @@ section p {
 footer {
     margin-top: auto;
     padding: 10px 0;
-    background: #89c7de;
+    /* background: #89c7de; */
+    /* color: aquamarine; */
+    background: rgb(93, 218, 124);
     color: #fff;
     text-align: center;
 }
