--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ nav #menu .item {
 .sub_link::after { content: "リンク集"; }
 
 section {
-    width: 30%;
+    width: 70%;
     padding-left: 20%;
 }
 
@@ -102,6 +102,15 @@ section h2{
 section p {
     margin: 20px 5px 10px 5px;
     padding: 5px 20px;
+}
+
+.container {
+    display: flex;
+}
+
+.subItem {
+    margin: 20px;
+    width: 400px;
 }
 
 footer {
