--- a/subPage/illust/style.css
+++ b/subPage/illust/style.css
@@ -1,2 +1,22 @@
 @charset "UTF-8";
 
+.container {
+    max-width: 1100px;
+    margin: 1% auto;
+    padding: 2% 2%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    grid-template-rows: 1fr 1fr;
+  /*  background-color: black;*/
+}
+
+.item{
+    border-radius: 10px;
+  /*  background:  #eff;*/
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    width: 350px;
+	height: auto;
+  }
