--- a/manabiLAB/style_01.css
+++ b/manabiLAB/style_01.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+h1, h2, h3, p { 
+  color: rgb(39, 39, 39);  
+  font-family: "M PLUS 1p";
+}
+
+h1{font-size: 3rem;}
+h2{font-size: 2.5rem;}
+h3{font-size: 2.0rem;}
+p{font-size: 1.4rem;}
+
 .layout {
   width: 100%;
   height: 100%;
